# Vayesta

./: .buildinfo  .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG  MANIFEST.in  README.md  README.rst  TODO.txt  codecov.yml  genindex.html  index.html  install.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  run_tests.py  traffic.yaml
_modules/: index.html  vayesta.html
_modules/vayesta/: dmet.html  edmet.html  ewf.html  lattmod.html  libs.html  mpi.html  rpa.html  solver.html
_sources/: install.rst.txt
_sources/apidoc/: modules.rst.txt  vayesta.core.ao2mo.rst.txt  vayesta.core.bath.rst.txt  vayesta.core.bosonic_bath.rst.txt  vayesta.core.fragmentation.rst.txt  vayesta.core.qemb.rst.txt  vayesta.core.rst.txt  vayesta.core.scmf.rst.txt  vayesta.core.screening.rst.txt  vayesta.core.symmetry.rst.txt  vayesta.core.types.ebwf.rst.txt  vayesta.core.types.rst.txt  vayesta.core.types.wf.rst.txt  vayesta.dmet.rst.txt  vayesta.edmet.rst.txt  vayesta.ewf.rst.txt  vayesta.lattmod.rst.txt  vayesta.libs.rst.txt  vayesta.misc.molecules.rst.txt  vayesta.misc.rst.txt  vayesta.misc.solids.rst.txt  vayesta.misc.variational_embedding.rst.txt  vayesta.mpi.rst.txt  vayesta.rpa.rirpa.rst.txt  vayesta.rpa.rst.txt  vayesta.rst.txt  vayesta.solver.eb_fci.rst.txt  vayesta.solver.rst.txt  vayesta.tools.plotting.rst.txt  vayesta.tools.rst.txt
_sources/faq/: mpi4py.rst.txt
_sources/include/: links.rst.txt
_sources/quickstart/: dmet.rst.txt  ewf.rst.txt  index.rst.txt
apidoc/: modules.html  vayesta.core.ao2mo.html  vayesta.core.bath.html  vayesta.core.bosonic_bath.html  vayesta.core.fragmentation.html  vayesta.core.html  vayesta.core.qemb.html  vayesta.core.scmf.html  vayesta.core.screening.html  vayesta.core.symmetry.html  vayesta.core.types.ebwf.html  vayesta.core.types.html  vayesta.core.types.wf.html  vayesta.dmet.html  vayesta.edmet.html  vayesta.ewf.html  vayesta.html  vayesta.lattmod.html  vayesta.libs.html  vayesta.misc.html  vayesta.misc.molecules.html  vayesta.misc.solids.html  vayesta.misc.variational_embedding.html  vayesta.mpi.html  vayesta.rpa.html  vayesta.rpa.rirpa.html  vayesta.solver.eb_fci.html  vayesta.solver.html  vayesta.tools.html  vayesta.tools.plotting.html
doc/source/: conf.py  devnotes.rst  ewf.rst  index.rst  installation.rst  modules.rst
docs/: README.md  README.rst  index.html  make_apidoc.sh  tutorials.rst
docs/source/: about.rst  conf.py  faq.rst  index.rst  install.rst  intro.rst  modules.rst  modules.rst~  vayesta.core.ao2mo.rst  vayesta.core.bath.rst  vayesta.core.fragmentation.rst  vayesta.core.qemb.rst  vayesta.core.rst  vayesta.core.scmf.rst  vayesta.core.symmetry.rst  vayesta.core.types.rst  vayesta.core.vpyscf.rst  vayesta.ewf.rst  vayesta.lattmod.rst  vayesta.libs.rst  vayesta.misc.gmtkn55.rst  vayesta.misc.plotting.rst  vayesta.misc.rst  vayesta.misc.solids.rst  vayesta.rpa.rirpa.rst  vayesta.rpa.rst  vayesta.rst  vayesta.solver.rst
docs/templates/: package.rst_t
examples/: run_examples.py
examples/dmet/: 01-simple-dmet.py  02-rotational-symmetry.py  03-bno-threshold.py  03-density-matrices.py  04-h-ring-diis.py  63-hubbard-1d.py  63-tsymmetry-hubbard-1d.py  64-hubbard-2d.py  64-tsymmetry-hubbard-2d.py  65-hubbard-2d-charge-sc.py  65-hubbard-2d-chargeconsistency.py  70-h-ring-benchmark.py
examples/eagf2/: 01-simple-eagf2.py  02-exact-eagf2.py
examples/edmet/: 01-1d-hubbard-comparison.py  01_1d_hubbard_comparison.py  02_1d_EHubbard_nimp.py  10-bosonic-Hamiltonians.py  30-start-from-dft.py  70-h-ring-benchmark-df.py  70-h-ring-benchmark.py  71-h-ring-benchmark-df.py  72-h-chain-benchmark.py
examples/egf/: 01-hubbard1d-exact-limit.py  65-callback-solver-dyson.py
examples/ewdmet/: 01-sc-qp-ewdmet-hubbard1d-exact-limit.py  01-sc-qp-ewdmet-hubbard1d.py  02-sc-qp-ewdmet-hubbard1d-projectors.py  03-sc-qp-ewdmet-hubbard1d-bethe.py  03-sc-qp-ewdmet-hydrogen.py  05-sc-qp-ewdmet-hydrogen-chain-k.py  10-sc-qp-ewdmet-hydrogen-ring-exact-limit.py  65-callback-solver-dyson.py
examples/ewf/: 01-simple-ewf-uhf.py  01-simple-ewf.py  01-simple-uewf.py  02-exact-ewf-solid.py  02-exact-ewf.py  03-bno-threshold.py  04-pop-analysis.py  05-self-consistency.py  06-sc-dissociation.py  06-sc-h-ring.py  07-fci-solver.py  08-combine-fci.py  11-fragmentations.py  12-pop-analysis.py  15-electron_target.py  21-simple-solid.py  22-diamond.py  22-solids.py  31-tccsd.py  32-tccsd-dissociation.py  33-tccsd-solid.py  34-tccsd-cas.py  35-self-consistency.py  39-cr2.py  41-plot-orbitals.py  51-hubbard-1d.py  52-hubbard-2d.py  55-combine-fci-hubbard-1d.py  56-tcc-hubbard-1d.py  57-sc-tcc-hubbard-1d.py  61-hubbard-1d-optimize-chempot.py  63-hub1d-tsymmetry.py  63-tsymmetry-hubbard-1d.py  64-tsymmetry-hubbard-2d.py  65-tsymmetry-ab-initio.py  71-sc-h-ring.py  72-sc-h-plane.py  76-sc-graphene.py  99-modify-hcore.py  (+4 more)
faq/: blas.html  env.html  index.html  mpi4py.html
include/: links.html
quickstart/: 1dhubbard.html  dmet.html  dumpcluster.html  edmet.html  ewf.html  fragmentation.html  index.html  mpi.html
tests/: common.py  pyscf-01.out  systems.py
tools/: energy_decomposition.py  eos.py
vayesta/: CHANGELOG  __init__.py  logo.txt
vayesta/libs/: CMakeLists.txt  __init__.py  libcore.dylib
vayesta/libs/core/: CMakeLists.txt
vayesta/libs/core/src/: CMakeLists.txt  cblas.h  j3c_jk.c  j3c_kao2gmo.c
vayesta/libs/df/: CMakeLists.txt
vayesta/libs/df/src/: CMakeLists.txt  df_jk.c
vayesta/libs/eagf2/: CMakeLists.txt
vayesta/libs/eagf2/src/: CMakeLists.txt  agf2.c  kragf2.c  ragf2.c  ragf2.h
vayesta/libs/ewf/: CMakeLists.txt
vayesta_output/: log.txt
(+1258 files in other folders)
