[project]
name = "Vayesta"
description = "A toolkit for quantum embedding methods"
keywords = [
    "embedding",
    "quantum", "chemistry",
    "material", "science",
    "electronic", "structure",
    "dmet", "rpa"
]
authors = [
    {name="M. Nusspickel", email="vayesta.embedding@gmail.com"},
    {name="O. J. Backhouse", email="vayesta.embedding@gmail.com"},
    {name="B. Ibrahim", email="vayesta.embedding@gmail.com"},
    {name="A. Santana-Bonilla", email="vayesta.embedding@gmail.com"},
    {name="C. J. C. Scott", email="vayesta.embedding@gmail.com"},
    {name="A. Khedkar", email="vayesta.embedding@gmail.com"},
    {name="G. H. Booth", email="vayesta.embedding@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.1.0,<=1.10.0",
    "h5py>=2.7",
    "cvxpy>=1.1",
    "pyscf @ git+https://github.com/pyscf/pyscf@master",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
license-files = ["LICENSE"]

[tools.setuptools.dynamic]
version = {attr = "vayesta.__version__"}

[project.optional-dependencies]
dmet = [
    "cvxpy>=1.1",
]
mpi = [
    "mpi4py>=3.0.0",
]
dyson = [
    "dyson @ git+https://github.com/BoothGroup/dyson@master",
]
ebcc = [
    "ebcc<=1.5.0",
]
pygnme = [
    "pygnme @ git+https://github.com/BoothGroup/pygnme@master" 
]
block2 = [
    "block2 @ git+https://github.com/block-hczhai/block2-preview.git"
]
dev = [
    "cvxpy>=1.1",
    "mpi4py>=3.0.0",
    "dyson @ git+https://github.com/BoothGroup/dyson@master",
    "ebcc<=1.5.0",
    "black>=22.6.0",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[tool.coverage.run]
branch = true
source = ["vayesta"]
omit = [
    "*/libs/*",
    "*/tests/*",
    "*/tools/*",
    "*/core/DEL/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise RuntimeError",
    "raise NotImplementedError",
    "raise AssertionError",
    "raise ValueError",
    "raise AbstractMethodError",
    "except ImportError",
    "pass",
    "if __name__ == .__main__.:",
    "def __repr__",
    "def __str__",
    "log.error",
    "log.critical",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -m 'not veryslow'"
testpaths = ["vayesta/tests"]
markers = [
    "fast",
    "slow",
    "veryslow",
]

[tool.black]
line-length = 120
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
]
include="\\.py"
extend-exclude = """
/(
    __pycache__*
/)
"""
